# WikipediaStep

./: WikipediaStep.sln
WikiLib/: CMakeLists.txt
WikiLib/include/: pageparser.h  pageparser.hpp
WikiLib/src/: pageparser.cpp  pageparser.h
WikipediaStep/: EnvironmetProperties.cs  Nodes.cs  Page.cs  Program.cs  WikipediaStep.csproj
WikipediaStep/include/: Pageparser.h
WikipediaStep/src/: EnvironmentProperties.cs  Nodes.cs  Page.cs  Pageparser.cpp  WikiLibAccess.cs
